--- a/css/index.css
+++ b/css/index.css
@@ -48,13 +48,49 @@ table {
 }
 
 * {
-    box-sizing: border-box;
+    box-sizing: border-box;  
+    margin: 0 auto;
 }
 
 html, body {
     height: 100%;
     font-family: 'Roboto', sans-serif;
 }
+header {
+    /* display:flex;
+    justify-content:space-evenly;
+    align-items:center;
+    margin: 2% auto;
+    max-width: 100%; */
+        max-width:100%;
+        display:flex;
+        justify-content:space-between;
+        align-items:center;
+        margin-bottom:1rem;
+        padding-top: 1rem;
+        padding-bottom: 1rem;
+}
+.logo {
+    margin-left: 20%;
+}
+header nav {
+    display:flex;
+    justify-content:space-around;
+    align-content:center;
+    margin-right:35%;
+    flex-wrap:nowrap;
+    padding-top:1%;
+}
+header nav a {
+    padding:0 20%;
+    color:black;
+    text-decoration:none;
+}
+    .picture {
+        display:flex;
+        justify-content:center;
+        margin-bottom:2%;
+    }
 
 h1, h2, h3, h4, h5 {
     font-size: 18px;
@@ -111,7 +147,6 @@ p {
     align-items: center;
     justify-content: center;
 }
-
 .bottom-content {
     display: flex;
     margin: 0 2% 20px;
@@ -143,4 +178,83 @@ footer nav {
 footer nav a {
     color: white;
     text-decoration: none;
+}
+
+.header2 {
+    max-width:100%;
+        display:flex;
+        justify-content:space-between;
+        align-items:center;
+        margin-bottom:1rem;
+        padding-top: 1rem;
+        padding-bottom: 1rem;
+        margin-top:0.75%;
+}
+.logo2 {
+    margin-left: 20%;
+}
+.nav2 {
+    display:flex;
+    justify-content:space-evenly;
+    margin-left: 15%;
+}
+
+.mainpicture {
+    display:flex;
+    justify-content:center;
+    align-items:center;
+    margin-bottom:2%;
+}
+.infopics {
+    width:100%;
+	display:flex;
+	justify-content: space-evenly;
+	align-items:center;
+	flex-flow: row wrap;
+	margin-left:auto;
+    margin-right:auto;
+    margin-top:2%;
+    padding:0.5% 5%;
+    width:72%;
+    border-top:1px dotted black;
+}
+.infopics div {
+    display:flex;
+    flex-direction:column;
+    flex-wrap:wrap;
+    width:50%;
+    padding:5%;
+    border-bottom:2px dotted black;
+}
+.infopics div h2 {
+    margin-top:5%;
+    margin-bottom: 0;
+}
+.infopics div h3 a{
+    color:black;
+    text-decoration:none;
+    border:2px solid black;
+    border-radius:15px;
+    padding: 2% 3.5%;
+}
+.infopics div .paragraph {
+    width:100%;
+    padding-left:0;
+    border:none;
+}
+
+.bottomtext {
+    display:flex;
+    flex-wrap:wrap;
+    flex-direction:column;
+    margin-left:auto;
+    margin-right:auto;
+    width:60%;
+    padding:3% 0;
+}
+footer {
+    width:60%;
+    display:flex;
+    align-items:center;
+    margin-left:20%;
 }
