--- a/css/index.css
+++ b/css/index.css
@@ -56,37 +56,37 @@ html, body {
     height: 100%;
     font-family: 'Roboto', sans-serif;
 }
+
 header {
-    /* display:flex;
-    justify-content:space-evenly;
+    width: 50%;
+    display:flex;
+    justify-content:space-around;
+    align-content:space-between;
     align-items:center;
-    margin: 2% auto;
-    max-width: 100%; */
-        max-width:100%;
-        display:flex;
-        justify-content:space-between;
-        align-items:center;
-        margin-bottom:1rem;
-        padding-top: 1rem;
-        padding-bottom: 1rem;
+    margin-bottom:1rem;
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+    padding-left: 35%;
 }
-.logo {
-    margin-left: 20%;
-}
+
 header nav {
     display:flex;
     justify-content:space-around;
-    align-content:center;
-    margin-right:35%;
+    align-items:center;
+    margin-right:50%;
     flex-wrap:nowrap;
     padding-top:1%;
+    margin-left:60%;
+}
+.logofirst img {
+
 }
 header nav a {
     padding:0 20%;
     color:black;
     text-decoration:none;
 }
-    .picture {
+.picture {
         display:flex;
         justify-content:center;
         margin-bottom:2%;
@@ -137,10 +137,100 @@ p {
     justify-content: space-evenly;
 }
 
-.middle-content .boxes .box {
+.middle-content .boxes .box1 {
     width: 12.5%;
     height: 100px;
-    background: black;
+    background: teal;
+    margin: 20px 2.5%;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.middle-content .boxes .box2 {
+    width: 12.5%;
+    height: 100px;
+    background: gold;
+    margin: 20px 2.5%;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.middle-content .boxes .box3 {
+    width: 12.5%;
+    height: 100px;
+    background: cadetblue;
+    margin: 20px 2.5%;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.middle-content .boxes .box4 {
+    width: 12.5%;
+    height: 100px;
+    background: coral;
+    margin: 20px 2.5%;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.middle-content .boxes .box5 {
+    width: 12.5%;
+    height: 100px;
+    background: crimson;
+    margin: 20px 2.5%;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.middle-content .boxes .box6 {
+    width: 12.5%;
+    height: 100px;
+    background: forestgreen;
+    margin: 20px 2.5%;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.middle-content .boxes .box7 {
+    width: 12.5%;
+    height: 100px;
+    background: darkorchid;
+    margin: 20px 2.5%;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.middle-content .boxes .box8 {
+    width: 12.5%;
+    height: 100px;
+    background: hotpink;
+    margin: 20px 2.5%;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.middle-content .boxes .box9 {
+    width: 12.5%;
+    height: 100px;
+    background: indigo;
+    margin: 20px 2.5%;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.middle-content .boxes .box10 {
+    width: 12.5%;
+    height: 100px;
+    background: dodgerblue;
     margin: 20px 2.5%;
     color: white;
     display: flex;
@@ -179,82 +269,102 @@ footer nav a {
     color: white;
     text-decoration: none;
 }
-
-.header2 {
-    max-width:100%;
-        display:flex;
-        justify-content:space-between;
-        align-items:center;
-        margin-bottom:1rem;
-        padding-top: 1rem;
-        padding-bottom: 1rem;
-        margin-top:0.75%;
+body {
+    width:50%;
+    margin:0 auto;
 }
-.logo2 {
-    margin-left: 20%;
-}
-.nav2 {
+header {
     display:flex;
     justify-content:space-evenly;
-    margin-left: 15%;
+    width:85%;
+    margin-right:100%;
 }
-
-.mainpicture {
+header nav {
+    display:flex;
+    justify-content:space-evenly;
+    align-items:center;
+    margin-right:75%;
+    flex-wrap:nowrap;
+    padding-top:1%;
+}
+.logo img {
+    padding-left:35%;
+    width:20%;
+}
+header nav a {
+    padding:0 20%;
+    color:black;
+    text-decoration:none;
+    font-size:0.90rem;
+}
+.mainpicture{
+    width:90%;
     display:flex;
     justify-content:center;
     align-items:center;
-    margin-bottom:2%;
+    margin: 0 auto;
+}
+.about-page {
+    display:flex;
+    justify-content:center;
+    flex-direction:column;
+    align-items:flex-start;
+    margin-top:2%;
+    border-bottom:2px dotted black;
+    padding-bottom: 2%;
 }
 .infopics {
-    width:100%;
-	display:flex;
-	justify-content: space-evenly;
-	align-items:center;
-	flex-flow: row wrap;
-	margin-left:auto;
-    margin-right:auto;
-    margin-top:2%;
-    padding:0.5% 5%;
-    width:72%;
-    border-top:1px dotted black;
+    width:90%;
+    display:flex;
+    justify-content:center;
+    flex-wrap:wrap;
+    margin:0 auto;
+
 }
-.infopics div {
+.infopics div{
+    width:42%;
+    border-bottom:2px dotted black;
+    margin:2% auto;
+    padding-bottom:2%;
+}
+.infopics div img {
+    width:100%;
+}
+.infopics div h3 a {
+    color:black;
+    border:2px solid black;
+    padding: 1.5% 3.5%;
+    border-radius:15px;
+    margin-bottom:5%;
+    text-decoration:none;
+}
+.infopics div p {
+    margin-bottom:5%;
+}
+.bottomtext{
     display:flex;
     flex-direction:column;
-    flex-wrap:wrap;
-    width:50%;
-    padding:5%;
-    border-bottom:2px dotted black;
+    justify-content:flex-start;
+    width:85%;
+    margin:0 auto;
+    padding-top:3%;
+    padding-bottom:3.5%;
 }
-.infopics div h2 {
-    margin-top:5%;
-    margin-bottom: 0;
-}
-.infopics div h3 a{
-    color:black;
-    text-decoration:none;
-    border:2px solid black;
-    border-radius:15px;
-    padding: 2% 3.5%;
-}
-.infopics div .paragraph {
-    width:100%;
-    padding-left:0;
-    border:none;
+.footer2 {
+    width: 90%;
+    background: black;
+    margin:0 auto;
 }
 
-.bottomtext {
-    display:flex;
-    flex-wrap:wrap;
-    flex-direction:column;
-    margin-left:auto;
-    margin-right:auto;
-    width:60%;
-    padding:3% 0;
+.footer2 nav {
+    width: 60%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 20px 2%;
+    font-size: 14px;
 }
-footer {
-    width:60%;
-    display:flex;
-    align-items:center;
-    margin-left:20%;
+.footer2 nav a {
+    color: white;
+    text-decoration: none;
 }
